# Langgraph-Whatsapp

./: .env.example  .gitignore  LICENSE  README.md  checkpoints.sqlite  checkpoints.sqlite-shm  openapi.json  openwa-port-curl.bat  pyproject.toml  requirements.txt  run.bat  start.bat  summarize_log.py  whatsapp_activity_log.md
scratch/: check_webhooks.py  fix_webhooks.py
src/: LICENSE
src/agents/base/: google_calendar.py  graph.py  prompt.py  tools.py
src/langgraph_whatsapp/: agent.py  channel.py  config.py  server.py
