[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-template"
version = "0.1.0"
description = "Whatsapp Agent Template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain_community>=0.3.17,<0.4",
    "langchain_openai>=0.3.10,<0.4",
    "langchain-ollama>=0.2.2,<1",
    "langgraph>=0.3.20,<0.4",
    "langgraph-sdk>=0.1.61, <1",
    "langchain-mcp-adapters>=0.0.5,<1",
    "langgraph_supervisor>=0.0.16,<0.1",
    "jinja2>=3.1.6,<4",
    "fastapi>=0.115.12",
    "python-multipart>=0.0.20, <0.1.0",
    "httpx>=0.27.0,<0.28.0",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.55.1",
    "google-auth-oauthlib>=1.4.0",
    "google-auth-httplib2>=0.4.0",
    "langchain-chroma>=0.2.6",
    "duckduckgo-search>=8.1.1",
    "pymupdf>=1.28.0",
]

[[project.authors]]
name = "lgesuellip"
email = "lautaro@pampa.ai"

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/langgraph_whatsapp"]

[project.scripts]
react-agent = "agents.base.react:main"
